Update web theme values
For the product rename, we've also changed the theme names, please see https://github.com/uyuni-project/uyuni/pull/9841.

--- a/modules/administration/pages/users.adoc
+++ b/modules/administration/pages/users.adoc
@@ -186,8 +186,8 @@ web.theme_default = <THEME>
 .Available WebUI Themes
 [cols="1,1,1", options="header"]
 |===
-| Theme Name            | Colors    | Style
-| ``susemanager-light`` | {susemgr} | Light
-| ``susemanager-dark``  | {susemgr} | Dark
-| ``uyuni``             | {uyuni}   | Light
+| Theme Name     | Colors    | Style
+| ``suse-light`` | {susemgr} | Light
+| ``suse-dark``  | {susemgr} | Dark
+| ``uyuni``      | {uyuni}   | Light
 |===
