system_listeventhistory reference (#3802)
* https://github.com/SUSE/spacewalk/issues/26700
* https://bugzilla.suse.com/show_bug.cgi?id=1239604

--- a/modules/reference/pages/spacecmd/system.adoc
+++ b/modules/reference/pages/spacecmd/system.adoc
@@ -485,6 +485,29 @@ channel:CHANNEL
 
 
 
+== system_listeventhistory
+
+List the event history for a system.
+
+[source]
+----
+usage: system_listeventhistory <SYSTEMS> [options]
+
+options:
+  -s START_TIME list only the events happened after the specified time. [Default: returns all events]
+  -o OFFSET skip the first events. Ignored if -l is not specified as well. [Default: 0]
+  -l LIMIT limit the results to the specified number of events. [Default: no limit]
+
+<SYSTEMS> can be any of the following:
+name
+ssm (see 'help ssm')
+search:QUERY (see 'help system_search')
+group:GROUP
+channel:CHANNEL
+----
+
+
+
 == system_listevents
 
 List the event history for a system.
