--- a/modules/client-configuration/pages/client-proxy-script.adoc
+++ b/modules/client-configuration/pages/client-proxy-script.adoc
@@ -56,11 +56,7 @@ If needed, use the additional command line switches to tune your bootstrap scrip
 
 * Transfer it to the client and run it directly on the clients.
 
-+
-
-// FIXME: or from the proxy???
-
-* Execute it from the server with [command]``ssh``.
+* Execute it from the proxy with [command]``ssh``.
   Replace [systemitem]``<bootstrap>`` with the name of the bootstrap script and [systemitem]`` <client.example.com>`` with the host name of the client:
 
 +
