--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-mlm.adoc
@@ -1,10 +1,10 @@
 [[deploy-mlm-server]]
-= {productname} {productnumber} Server Deployment on {sl-micro}
+= {productname} {productnumber} Server Deployment
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
 
-This guide shows you how to install and configure a {productname} {productnumber} container on {sl-micro} {microversion}.
+This guide shows you how to install and configure a {productname} {productnumber} container on {sle-micro} {microversion} or {sles} {bci-mlm}.
 
 // Link to hardware requirements do not show them here. We list them on other pages.
 // Done within next section.
@@ -19,7 +19,9 @@ For background information about disk space, see xref:installation-and-upgrade:h
 .Software and Hardware Requirements
 |===
 | Software and Hardware  | Recommended
-| Operating System       | {sl-micro} {microversion}
+| Operating System       | {sle-micro} {microversion} or
+
+                           {sles} {bci-mlm}
 | Architecture           | {x86_64}, {arm}, {s390x}, {ppc64le}
 | Processor (CPU)        | Minimum of four (4) 64-bit CPU cores
 | RAM                    | 16 GB
@@ -33,7 +35,7 @@ For background information about disk space, see xref:installation-and-upgrade:h
 .Supported operating system for the Server Container Host
 [NOTE]
 ====
-The supported operating system for the container host is {sl-micro} {microversion}.
+The supported operating system for the container host is {sle-micro} {microversion} or {sles} {bci-mlm}.
 
 Container host::
 A container host is a server equipped with a container engine like [systemitem]``Podman``, which lets it manage and deploy containers.
@@ -82,11 +84,11 @@ Recommended minimum size for this is at least 300 GB, and larger if there will 
 Recommended Filesystem::
 XFS (though any supported filesystem for {sl-micro} {microversion} could work).
 
-====
-
 Optional::
 You can provide custom storage for the volumes by mounting disks on the expected volume path inside it such as [path]``/var/lib/containers/storage/volumes/var-spacewalk``.
 This adds to the complexity of a {productname} deployment, and may affect the resilience the default storage recommendation provides.
+
+====
 
 
 For a list of all persistent volumes in the container, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[].
@@ -96,7 +98,7 @@ For a list of all persistent volumes in the container, see xref:installation-and
 
 
 [[deploy-mlm-server-micro]]
-== {sl-micro} {microversion} Installation
+==  Deploy {productname} on {sle-micro} {microversion}
 
 .Procedure: Download the Installation Media
 . Locate the {sl-micro} {microversion} installation media at https://www.suse.com/download/sle-micro/.
@@ -128,7 +130,9 @@ Depending on the specific extension needed from the list below, additional {sccl
 * {productname} {productnumber} Proxy
 * Retail Branch Server
 ====
+
 +
+
 [IMPORTANT]
 ====
 The {sl-micro} {microversion} entitlement is included within the {productname} entitlement, so it does not require a separate registration code.
@@ -172,13 +176,17 @@ To register {arm} or {s390x} architectures use the correct registration code.
 
 . Next add the **{productname} Server Extension 5.1 x86_64** Extension.
   List available extensions with the following command:
+
 +
+
 ----
 transactional-update --quiet register --list-extensions
 ----
 
 . Use your **{productname} Server Extension 5.1 x86_64** registration code with the following command:
+
 +
+
 ----
 transactional-update register -p SUSE-Manager-Server/5.1/x86_64 -r <reg_code>
 ----
@@ -190,6 +198,7 @@ transactional-update register -p SUSE-Manager-Server/5.1/x86_64 -r <reg_code>
 .Procedure
 . Log in as *root*.
 . Run **transactional-update**:
+
 +
 
 [source, shell]
@@ -199,6 +208,7 @@ transactional-update
 
 . Reboot.
 
+
 === Configure Custom Persistent Storage
 
 Configuring persistent storage is optional, but it is the only way to avoid serious trouble with container full disk conditions.
@@ -206,19 +216,28 @@ It is highly recommended to configure custom persistent storage with the [comman
 
 * For more information, see [command]``mgr-storage-server --help``.
 This tool simplifies creating the container storage and database volumes.
+
 +
+
 Use the command in the following manner:
+
 +
 
 ----
 mgr-storage-server <storage-disk-device> [<database-disk-device>]
 ----
+
 +
+
 For example:
+
 +
+
 ----
 mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
+
 ----
+
 +
 
 [NOTE]
@@ -231,6 +250,42 @@ For more information, see
 * xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
 ====
 
+
+
+== Install {productname} on {sles} {bci-mlm}
+
+Alternatively, you can install {productname} on {sles} {bci-mlm}.
+The following procedure describes the main steps of the installation process.
+
+.Procedure: Installing {productname} on {sles} {bci-mlm}
+. Locate and download {sles} {bci-mlm} [literal]``.iso`` at https://www.suse.com/download/sles/.
+. Make sure that the {scc} code you plan to use has the Extensions enabled.
+. Start the installation of {sles} {bci-mlm}.
+  .. On the [literal]``Language, keyboard and product selection`` select the product to install.
+  .. On the [literal]``License agreement`` read the agreement and check [guimenu]``I Agree to the License Terms``.
+. Select the registration method. 
+. In the screen [literal]``Extensions and Modules Selection`` check the following:
+  * {productname} Server Extension
+  * Basesystem Module
+  * Containers Module
+. Complete the installation.
+. When the installation completes, log in to the newly installed server as root.
+. As root, run
+
++
+
+[source,shell]
+----
+zypper install podman
+----
+. Finish the {productname} installation on {sles} {bci-mlm} by running command:
+
++
+
+[source,shell]
+----
+mgradm install podman
+----
 
 
 [[deploy-mlm-server-mgradm]]
