--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -35,7 +35,7 @@ endif::[]
 ifeval::[{mlm-content} == true]
 ** Installation and Deployment
 *** xref:install-server.adoc[Server]
-**** xref:container-deployment/mlm/server-deployment-mlm.adoc[{productname} Deployment on {sl-micro}]
+**** xref:container-deployment/mlm/server-deployment-mlm.adoc[{productname} Deployment]
 **** xref:container-deployment/mlm/server-deployment-vm-mlm.adoc[Server Deployment as Virtual Machine - KVM]
 **** xref:container-deployment/mlm/server-deployment-vmdk-mlm.adoc[Server Deployment as Virtual Machine - VMware]
 **** xref:container-deployment/mlm/server-air-gapped-deployment-mlm.adoc[Air-gapped Deployment]
