--- a/modules/client-configuration/pages/client-proxy-script.adoc
+++ b/modules/client-configuration/pages/client-proxy-script.adoc
@@ -55,6 +55,8 @@ If needed, use the additional command line switches to tune your bootstrap scrip
 +
 
 * Transfer it to the client and run it directly on the clients.
+  Alternatively, because the proxy forwards requests to the server, the client can download it from http://MLM_PROXY/pub/bootstrap.
+  Replace [literal]``MLM_PROXY`` with the host name of your proxy.
 
 * Execute it from the proxy with [command]``ssh``.
   Replace [systemitem]``<bootstrap>`` with the name of the bootstrap script and [systemitem]`` <client.example.com>`` with the host name of the client:
