server host OS requirement for Uyuni to openSUSE Leap Micro 5.5 https://github.com/uyuni-project/uyuni-docs/issues/3800

--- a/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
@@ -22,9 +22,9 @@ Do not use NFS for storage because it does not support SELinux file labeling.
 | Details
 | Recommendation
 
-| openSUSE Leap 15.5
+| {leapmicro} {microversion}
 | Clean installation, up-to-date
-| openSUSE Leap 15.5
+| {leapmicro} {microversion}
 
 | CPU
 | -
