Apply suggestions from code review
Co-authored-by: Ondřej Holeček <oholecek@suse.com>

--- a/modules/client-configuration/pages/client-proxy-script.adoc
+++ b/modules/client-configuration/pages/client-proxy-script.adoc
@@ -5,10 +5,11 @@
 You can register clients through the {productname} Proxy with a bootstrap script.
 This is done almost the same way as registering clients directly with the {productname} Server.
 
-You create the bootstrap script on the {productname} Server with a command line tool.
-The bootstrap script then deploys all necessary information to the clients.
-The bootstrap script requires some parameters such as the FQDN of the proxy, activation keys, or GPG keys.
+You create the bootstrap script in the {productname} Server container with the [command]``mgr-bootstrap`` command line tool.
+[command]``mgr-bootstrap`` requires some parameters such as the fully qualified domain name (FQDN) of the proxy, activation keys, or GPG keys.
 These parameters depend on your specific setup, but the FQDN of the proxy is mandatory.
+
+The bootstrap script then deploys all necessary information to the clients.
 
 
 
@@ -32,17 +33,14 @@ mgrctl term
 
 +
 
-// FIXME or must we set --http-proxy here?
-
-+
-
 [source,shell]
 ----
-mgr-bootstrap --hostname=FQDN --activation-keys=ACTIVATION_KEY
+mgr-bootstrap --hostname=MLM_PROXY --activation-keys=ACTIVATION_KEY
 ----
 
 +
 
+Replace [literal]``MLM_PROXY`` with the host name of your proxy.
 If needed, use the additional command line switches to tune your bootstrap script.
    To view available options type [command]``mgr-bootstrap --help`` from the command line.
 
