Changed base OS parameter to SLES 15 SP7.

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -22,7 +22,7 @@ For {productname} {smr} hardware requirements, see xref:retail:retail-requiremen
 [[server-hardware-requirements]]
 == Server Requirements
 
-One of {sle-micro} {microversion} or {sles} {sles-version} {sp-version} is the operating system of the container host.
+One of {sle-micro} {microversion} or {sles} {sles} {bci-mlm} is the operating system of the container host.
 In the following, {sles} as the installed host operating system is explicitly mentioned only if it matters.
 Otherwise we either write {sle-micro} or just host operating system.
 
