Apply suggestions from code review
Co-authored-by: Ornela Marić <omaric@suse.com>
Co-authored-by: Ondřej Holeček <oholecek@suse.com>

--- a/modules/client-configuration/pages/client-proxy-script.adoc
+++ b/modules/client-configuration/pages/client-proxy-script.adoc
@@ -52,11 +52,11 @@ Replace [literal]``MLM_PROXY`` with the host name of your proxy.
 
 +
 
-* Transfer it to the client and run it directly on the clients.
-  Alternatively, because the proxy forwards requests to the server, the client can download it from http://MLM_PROXY/pub/bootstrap.
+* Transfer the script to the client and run it directly on the clients.
+  Alternatively, because the proxy forwards requests to the server, the client can download it from http://MLM_PROXY/pub/bootstrap.sh.
   Replace [literal]``MLM_PROXY`` with the host name of your proxy.
 
-* Execute it from the proxy with [command]``ssh``.
+* Execute the script from the proxy with [command]``ssh``.
   Replace [systemitem]``<bootstrap>`` with the name of the bootstrap script and [systemitem]`` <client.example.com>`` with the host name of the client:
 
 +
