adjustments pre feedback

--- a/modules/client-configuration/pages/client-proxy-script.adoc
+++ b/modules/client-configuration/pages/client-proxy-script.adoc
@@ -29,19 +29,21 @@ mgrctl term
 +
 
 --
-.. In the container, to create the bootstrap script, execute the [command]``mgr-bootstrap`` command:
+.. In the container, to create the bootstrap script, execute the [command]``mgr-bootstrap`` command, for example, with these options:
 
 +
 
 [source,shell]
 ----
-mgr-bootstrap --hostname=MLM_PROXY --activation-keys=ACTIVATION_KEY
+mgr-bootstrap --hostname=MLM_PROXY --activation-keys=ACTIVATION_KEY \
+  --script bootstrap-MLM_PROXY.sh
 ----
 
 +
 
 Replace [literal]``MLM_PROXY`` with the host name of your proxy.
-   If needed, use the additional command line switches to tune your bootstrap script.
+   With the [option]``--script`` option you save the bootstrap script with a descriptive name.
+   If needed, use additional command line options to customize your bootstrap script.
    To view available options type [command]``mgr-bootstrap --help`` from the command line.
 
 .. OPTIONAL: Edit the resulting bootstrap script.
