Added SLES as base OS for Proxy installation.

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -41,7 +41,7 @@ ifeval::[{mlm-content} == true]
 **** xref:container-deployment/mlm/server-air-gapped-deployment-mlm.adoc[Air-gapped Deployment]
 **** xref:install-pubcloud.adoc[Public Cloud Deployment]
 *** xref:install-proxy.adoc[Proxy]
-**** xref:container-deployment/mlm/proxy-deployment-mlm.adoc[{productname} Proxy Deployment on {sl-micro}]
+**** xref:container-deployment/mlm/proxy-deployment-mlm.adoc[{productname} Proxy Deployment]
 **** xref:container-deployment/mlm/proxy-deployment-vm-mlm.adoc[Proxy Deployment as Virtual Machine - KVM]
 **** xref:container-deployment/mlm/proxy-deployment-vmdk-mlm.adoc[Proxy Deployment Virtual Machine - VMware]
 **** xref:container-deployment/mlm/proxy-k3s-deployment-mlm.adoc[Proxy Deployment on K3s]
