--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-mlm.adoc
@@ -1,5 +1,5 @@
 [[installation-proxy-containers]]
-= {productname} Proxy Deployment on {sl-micro}
+= {productname} {productnumber} Proxy Deployment
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -33,7 +33,7 @@ To successfully deploy, you will perform the following actions:
 .Supported operating system for the Proxy Container Host
 [NOTE]
 ====
-The supported operating system for the container host is {sl-micro} {microversion}.
+The supported operating system for the container host are {sle-micro} {microversion} and {sles} {bci-mlm}.
 
 Container host::
 A container host is a server equipped with a container engine like Podman, which lets it manage and deploy containers.
@@ -67,7 +67,7 @@ This channel must be fully synchronized on the server, with the child channel [s
 
 
 
-== {sl-micro} {microversion} Installation
+== Deploy {productname} Proxy on {sle-micro} {microversion}
 
 .Procedure: Downloading the Installation Media
 . Locate the {sl-micro} {microversion} installation media at https://www.suse.com/download/sl-micro/.
@@ -88,16 +88,6 @@ For detailed documentation on preparing your machines OS (virtual or physical), 
 . Click [systemitem]``Next`` to continue.
 . Select your registration method.
   For this example, we will register the proxy with {scclongform}.
-+
-
-.{productname} {productnumber} Proxy as an extension
-[NOTE]
-====
-The {productname} {productnumber} Proxy is registered as an extension. Therefore, in addition to acquiring an {scclongform} registration key for {sl-micro} {microversion}, you will also need an {scclongform} registration code for the following extension:
-
-* {productname} {productnumber} Proxy
-====
-
 . Enter your {scclongform} Email address.
 . Enter your registration code for {sl-micro} {microversion}.
 . Click [systemitem]``Next`` to continue.
@@ -143,7 +133,34 @@ transactional-update pkg install mgrpxy mgrpxy-bash-completion
 
 
 
-=== Configure Custom Persistent Storage
+== Deploy {productname} Proxy on {sles} {bci-mlm}
+
+Alternatively, you can install {productname} Proxy on {sles} {bci-mlm}.
+The following procedure describes the main steps of the installation process.
+
+.Procedure: Installing {productname} Proxy on {sles} {bci-mlm}
+. Locate and download {sles} {bci-mlm} [literal]``.iso`` at https://www.suse.com/download/sles/.
+. Make sure that the {scc} code you plan to use has the Extensions enabled.
+. Start the installation of {sles} {bci-mlm}.
+  .. On the [literal]``Language, keyboard and product selection`` select the product to install.
+  .. On the [literal]``License agreement`` read the agreement and check [guimenu]``I Agree to the License Terms``.
+. Select the registration method.
+. In the screen [literal]``Extensions and Modules Selection`` check the following:
+  * {productname} Proxy Extension
+  * Basesystem Module
+  * Containers Module
+. Complete the installation.
+. When the installation completes, log in to the newly installed server as root.
+. As root, run
+
++
+[source,shell]
+----
+zypper install podman mgrpxy mgrpxy-bash-completion
+----
+
+
+== Configure Custom Persistent Storage
 
 This step is optional.
 However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool.
