Apply suggestions from code review
Co-authored-by: Ondřej Holeček <oholecek@suse.com>

--- a/modules/client-configuration/pages/client-proxy-script.adoc
+++ b/modules/client-configuration/pages/client-proxy-script.adoc
@@ -42,6 +42,8 @@ mgr-bootstrap --hostname=MLM_PROXY --activation-keys=ACTIVATION_KEY \
 +
 
 Replace [literal]``MLM_PROXY`` with the host name of your proxy.
+
++
    With the [option]``--script`` option you save the bootstrap script with a descriptive name.
    If needed, use additional command line options to customize your bootstrap script.
    To view available options type [command]``mgr-bootstrap --help`` from the command line.
@@ -55,15 +57,15 @@ Replace [literal]``MLM_PROXY`` with the host name of your proxy.
 +
 
 * Transfer the script to the client and run it directly on the clients.
-  Alternatively, because the proxy forwards requests to the server, the client can download it from http://MLM_PROXY/pub/bootstrap.sh.
+  Alternatively, because the proxy forwards requests to the server, the client can download it from http://MLM_PROXY/pub/bootstrap-MLM_PROXY.sh.
   Replace [literal]``MLM_PROXY`` with the host name of your proxy.
 
 * Execute the script from the proxy with [command]``ssh``.
-  Replace [systemitem]``<bootstrap>`` with the name of the bootstrap script and [systemitem]`` <client.example.com>`` with the host name of the client:
+  Replace [literal]``MLM_PROXY`` with the host name of the proxy and [systemitem]`` <client.example.com>`` with the host name of the client:
 
 +
 
 [source,shell]
 ----
-cat <bootstrap> | ssh root@<client.example.com> /bin/bash
+cat /srv/www/htdocs/pub/bootstrap/bootstrap-MLM_PROXY.sh | ssh root@<client.example.com> /bin/bash
 ----
