--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-mlm.adoc
@@ -33,7 +33,7 @@ To successfully deploy, you will perform the following actions:
 .Supported operating system for the Proxy Container Host
 [NOTE]
 ====
-The supported operating system for the container host are {sle-micro} {microversion} and {sles} {bci-mlm}.
+The supported operating system for the container host are {sl-micro} {microversion} and {sles} {bci-mlm}.
 
 Container host::
 A container host is a server equipped with a container engine like Podman, which lets it manage and deploy containers.
@@ -67,7 +67,7 @@ This channel must be fully synchronized on the server, with the child channel [s
 
 
 
-== Deploy {productname} Proxy on {sle-micro} {microversion}
+== Deploy {productname} Proxy on {sl-micro} {microversion}
 
 .Procedure: Downloading the Installation Media
 . Locate the {sl-micro} {microversion} installation media at https://www.suse.com/download/sl-micro/.
