--- a/modules/common-workflows/pages/workflow-install-from-selfinstall-on-ppc.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-selfinstall-on-ppc.adoc
@@ -1,28 +1,27 @@
-[[workflow-install-from-selfinstall-on-ppc]]
-= Installing {productname} on {ppc64le}
+[[workflow-install-server-on-ppc]]
+= Install {productname} on {ppc64le}
 
 This guide demonstrates how to set up {productname} Server using SelfInstall ISO image on {ppc64le} machine.
 
 
-
-== Use Case
+== Use case
 
 This workflow outlines the steps to install {productname} on a {ppc64le} architecture using the SelfInstall ISO image.
-This method is used to create a container host for {productname}, allowing for efficient management of your systems.
+The method is used to create a container host for {productname}, allowing for efficient management of your systems.
 
 == Outcome
 
 Successful completion of this workflow results in successful installation of {productname} Server running on a {ppc64le} system.
 
-== Step-by-step Instructions
+== Step-by-step instructions
 
 [NOTE]
 ====
-This workflow is complex and time-consuming.
+The following workflow is complex and time-consuming.
 Make sure that adequate testing is done before deploying the procedure in live environment.
 ====
 
-.Procedure: Prepare the Prerequisites
+.Procedure: Prepare the prerequisites
 [role=procedure]
 . A physical or virtual machine that supports the {ppc64le} architecture.
 . Access to the SUSE SelfInstall ISO image for {productname} (either 512 or 4096 block size, depending on your disk configuration).
@@ -32,7 +31,7 @@ Make sure that adequate testing is done before deploying the procedure in live e
 
 
 
-.Procedure: Installation Steps
+.Procedure: Installing {productname}
 [role=procedure]
 
 . *Download and Prepare the Installation Media*
