for 5.0, replace MLM with SUMA

--- a/modules/client-configuration/pages/client-proxy-script.adoc
+++ b/modules/client-configuration/pages/client-proxy-script.adoc
@@ -35,13 +35,13 @@ mgrctl term
 
 [source,shell]
 ----
-mgr-bootstrap --hostname=MLM_PROXY --activation-keys=ACTIVATION_KEY \
-  --script bootstrap-MLM_PROXY.sh
+mgr-bootstrap --hostname=SUMA_PROXY --activation-keys=ACTIVATION_KEY \
+  --script bootstrap-SUMA_PROXY.sh
 ----
 
 +
 
-Replace [literal]``MLM_PROXY`` with the host name of your proxy.
+Replace [literal]``SUMA_PROXY`` with the host name of your proxy.
 
 +
 With the [option]``--script`` option you save the bootstrap script with a descriptive name.
@@ -57,15 +57,15 @@ With the [option]``--script`` option you save the bootstrap script with a descri
 +
 
 * Transfer the script to the client and run it directly on the clients.
-  Alternatively, because the proxy forwards requests to the server, the client can download it from http://MLM_PROXY/pub/bootstrap-MLM_PROXY.sh.
-  Replace [literal]``MLM_PROXY`` with the host name of your proxy.
+  Alternatively, because the proxy forwards requests to the server, the client can download it from http://SUMA_PROXY/pub/bootstrap-SUMA_PROXY.sh.
+  Replace [literal]``SUMA_PROXY`` with the host name of your proxy.
 
 * Execute the script from the proxy with [command]``ssh``.
-  Replace [literal]``MLM_PROXY`` with the host name of the proxy and [systemitem]`` <client.example.com>`` with the host name of the client:
+  Replace [literal]``SUMA_PROXY`` with the host name of the proxy and [systemitem]`` <client.example.com>`` with the host name of the client:
 
 +
 
 [source,shell]
 ----
-cat /srv/www/htdocs/pub/bootstrap/bootstrap-MLM_PROXY.sh | ssh root@<client.example.com> /bin/bash
+cat /srv/www/htdocs/pub/bootstrap/bootstrap-SUMA_PROXY.sh | ssh root@<client.example.com> /bin/bash
 ----
