Apply suggestions from code review
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/client-configuration/pages/client-proxy-script.adoc
+++ b/modules/client-configuration/pages/client-proxy-script.adoc
@@ -2,12 +2,14 @@
 = Register Clients  to a Proxy with a Bootstrap Script
 
 
-You can register clients through the {productname} Proxy with a bootstrap script.
+Clients can be registered through the {productname} Proxy with a bootstrap script.
 This is done almost the same way as registering clients directly with the {productname} Server.
 
-You create the bootstrap script in the {productname} Server container with the [command]``mgr-bootstrap`` command line tool.
-[command]``mgr-bootstrap`` requires some parameters such as the fully qualified domain name (FQDN) of the proxy, activation keys, or GPG keys.
-These parameters depend on your specific setup, but the FQDN of the proxy is mandatory.
+Create the bootstrap script in the {productname} Server container with the [command]``mgr-bootstrap`` command line tool.
+[command]``mgr-bootstrap`` requires parameters such as the fully qualified domain name (FQDN) of the proxy, activation keys, or GPG keys.
+FQDN of the proxy is mandatory.
+All other parameters depend on the specific setup.
+
 
 The bootstrap script then deploys all necessary information to the clients.
 
