--- a/modules/client-configuration/pages/virtualization.adoc
+++ b/modules/client-configuration/pages/virtualization.adoc
@@ -3,7 +3,7 @@
 
 You can use {productname} to manage virtualized clients.
 In this type of installation, a virtualization host is installed on the {productname} Server to manage any number of virtual guests.
-Within this document, instead of "virtualization host" often the short form "virtual host" is used.
+Within this document, instead of "virtualization host" sometimes the short form "virtual host" is used.
 If you choose to, you can install several virtual hosts to manage groups of guests.
 
 The range of capabilities that virtualized clients have depends on the third-party virtualization provider you choose.
