--- a/modules/client-configuration/pages/virtualization.adoc
+++ b/modules/client-configuration/pages/virtualization.adoc
@@ -24,7 +24,7 @@ For more information about using VHMs to manage virtualization, see xref:client-
 
 
 
-== Manage Virtualization Hosts
+== Manage Virtual Hosts
 
 Before you begin, ensure that the client you want to use as a virtualization host has the ``Virtualization Host`` system type assigned to it.
 Navigate to menu:Systems[Systems List] and click the name of the client to use as a virtualization host.
