--- a/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
+++ b/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
@@ -75,6 +75,25 @@ A third step is optional but highly recommended to finalize the update process.
 . Click btn:[Create Schedule] to save the action.
 
 
+
+== Background Information on [literal]``uptodate`` State
+
+For {suse}-based systems, as a first step, the [systemitem]``uptodate`` state applies critical security patches to the update stack by executing the command:
+
+[source,shell]
+----
+zypper --non-interactive patch --updatestack-only
+----
+
+Then, the states updates:
+
+    The client, that is either Salt or the Salt Bundle.
+    The package manager, such as dnf, yum, apt, or zypper based on what is available on the client OS.
+
+
+
+
+
 == Related Topics
 
 * For more information about recurring actions, see xref:administration:actions.adoc#recurring_actions[Recurring Actions].
