updated pdf themes for english

--- a/modules/administration/pages/admin-overview.adoc
+++ b/modules/administration/pages/admin-overview.adoc
@@ -26,10 +26,12 @@ guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor t
 for possible errors or the consequences thereof.
 endif::[]
 
+
 ifdef::backend-pdf[]
 
 <<<
 
+[preface]
 == Preface
 
 Administration Guide +
@@ -78,5 +80,7 @@ guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor t
 for possible errors or the consequences thereof.
 
 <<<
+
+toc::[]
 
 endif::[]
