--- a/modules/client-configuration/pages/client-config-overview.adoc
+++ b/modules/client-configuration/pages/client-config-overview.adoc
@@ -36,6 +36,7 @@ ifdef::backend-pdf[]
 
 <<<
 
+[preface]
 == Preface
 
 Client Configuration Guide +
@@ -85,5 +86,7 @@ guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor t
 for possible errors or the consequences thereof.
 
 <<<
+
+toc::[]
 
 endif::[]
