--- a/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
+++ b/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
@@ -37,6 +37,7 @@ ifdef::backend-pdf[]
 
 <<<
 
+[preface]
 == Preface
 
 Installation, Deployment and Upgrade +
@@ -92,5 +93,7 @@ guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor t
 for possible errors or the consequences thereof.
 
 <<<
+
+toc::[]
 
 endif::[]
