--- a/modules/reference/pages/reference-overview.adoc
+++ b/modules/reference/pages/reference-overview.adoc
@@ -35,6 +35,7 @@ ifdef::backend-pdf[]
 
 <<<
 
+[preface]
 == Preface
 
 Reference +
@@ -87,5 +88,7 @@ guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor t
 for possible errors or the consequences thereof.
 
 <<<
+
+toc::[]
 
 endif::[]
