--- a/modules/specialized-guides/pages/specialized-guides-overview.adoc
+++ b/modules/specialized-guides/pages/specialized-guides-overview.adoc
@@ -43,6 +43,7 @@ ifdef::backend-pdf[]
 
 <<<
 
+[preface]
 == Preface
 
 Specialized Guides +
@@ -93,5 +94,7 @@ guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor t
 for possible errors or the consequences thereof.
 
 <<<
+
+toc::[]
 
 endif::[]
