--- a/modules/common-workflows/pages/common-workflows-overview.adoc
+++ b/modules/common-workflows/pages/common-workflows-overview.adoc
@@ -37,6 +37,7 @@ ifdef::backend-pdf[]
 
 <<<
 
+[preface]
 == Preface
 
 Common Workflows +
@@ -85,5 +86,7 @@ guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor t
 for possible errors or the consequences thereof.
 
 <<<
+
+toc::[]
 
 endif::[]
