--- a/modules/retail/pages/retail-overview.adoc
+++ b/modules/retail/pages/retail-overview.adoc
@@ -50,7 +50,8 @@ endif::[]
 ifdef::backend-pdf[]
 
 <<<
-
+// Required for preface section of pdf
+[preface]
 == Preface
 
 Retail +
@@ -107,5 +108,7 @@ guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor t
 for possible errors or the consequences thereof.
 
 <<<
+
+toc::[]
 
 endif::[]
