--- a/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
+++ b/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
@@ -78,17 +78,31 @@ A third step is optional but highly recommended to finalize the update process.
 
 == Background Information on [literal]``uptodate`` State
 
-For {suse}-based systems, as a first step, the [systemitem]``uptodate`` state applies critical security patches to the update stack by executing the command:
+
+. The [systemitem]``uptodate`` state applies critical patches to the update components.
+
++
+
+--
+
+..  On {suse}-based systems, the state executes the command:
+
++
 
 [source,shell]
 ----
 zypper --non-interactive patch --updatestack-only
 ----
 
-Then, the states updates:
++
 
-    The client, that is either Salt or the Salt Bundle.
-    The package manager, such as dnf, yum, apt, or zypper based on what is available on the client OS.
+And then, the state also updates {salt}.
+
+.. On all the other systems, not based on {suse}, the state only updates {salt}.
+
+--
+
+. The state runs the package manager, such as dnf, yum, apt, or zypper based on what is available on the client OS to update the rest of the packages.
 
 
 
