Document password definition criteria.

--- a/modules/administration/pages/users.adoc
+++ b/modules/administration/pages/users.adoc
@@ -20,6 +20,47 @@ Click the username to go to the [guimenu]``User Details`` page.
 To add new users to your organization, click btn:[Create User], complete the details for the new user, and click btn:[Create Login].
 
 
+== Password requirements
+
+{productname} administrator has the option to enforce the password creation rules, thus ensuring that all new user passwords adhere to the organization's security standards.
+
+The exact password requirements are defined in menu:Admin[Manager Configuration > Password Policy]. 
+
+Click on this link to see the page entitled [literal]``Server Configuration - Password Policy``.
+This is where the password requirements can be defined using a combination of fields:
+
+Min Password Length::
+Use this field to define the minimal length of password.
+
+Max Password Length::
+Use this field to define the maximum length of password.
+
+Require Digits::
+Use this field to specify whether the password must include the digits (0-9).
+
+Require Lowercase Characters::
+Use this field to specify whether the password must include the lowercase characters (a-z).
+
+Require Uppercase Characters::
+Use this field to specify whether the password must include the uppercase characters (A-Z).
+
+Restrict Consecutive Characters::
+Use this field to specify whether the restricted consecutive characters.
+
+Require Special Characters::
+Use this field to specify whether the passoerd must include special characters.
+
+Allowed Special Characters::
+This field is enable only of the [literal]``Require Special Characters`` is selected.
+Use it to specify which special characters are allowed, for example [literal]``!@#$%&*``, and others.
+
+Restrict Character Occurences::
+Use this field to specify restricted character occurences.
+
+Max Character Occurences::
+Use this field to specify maximum character occurences.
+
+
 
 == Deactivate and Delete Accounts
 
