--- a/modules/administration/pages/users.adoc
+++ b/modules/administration/pages/users.adoc
@@ -20,6 +20,7 @@ Click the username to go to the [guimenu]``User Details`` page.
 To add new users to your organization, click btn:[Create User], complete the details for the new user, and click btn:[Create Login].
 
 
+[[users.password.requirments]]
 == Password requirements
 
 {productname} administrator has the option to enforce the password creation rules, thus ensuring that all new user passwords adhere to the organization's security standards.
