--- a/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
+++ b/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
@@ -102,9 +102,7 @@ And then, the state also updates {salt}.
 
 --
 
-. The state runs the package manager, such as dnf, yum, apt, or zypper based on what is available on the client OS to update the rest of the packages.
-
-
+. The state runs the package manager, such as [command]``dnf``, [command]``yum``, [command]``apt``, or [command]``zypper`` based on what is available on the client OS to update the rest of the packages.
 
 
 
