start adding details

--- a/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
+++ b/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
@@ -104,6 +104,14 @@ And then, the state also updates {salt}.
 
 . The state runs the package manager, such as [command]``dnf``, [command]``yum``, [command]``apt``, or [command]``zypper`` based on what is available on the client OS to update the rest of the packages.
 
++
+
+.. Listing all of the remaining packages that can be upgraded.
+
+.. Upgrading the packages to their latest available version by using the client's package manager.
+ The version depends on the synchronized repositories in {productname}.
+
+
 
 
 == Related Topics
