--- a/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
+++ b/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
@@ -106,12 +106,20 @@ And then, the state also updates {salt}.
 
 +
 
+--
+
 .. Listing all of the remaining packages that can be upgraded.
 
 .. Upgrading the packages to their latest available version by using the client's package manager.
  The version depends on the synchronized repositories in {productname}.
+ This is different depending on the operating system of the client:
 
+... For Debian-based clients, such as Debian or Ubuntu, the action executes [command]``apt dist-upgrade -q -y $PACKAGES``.
+... For RPM-based clients that are not SUSE, such as Red Hat Enterprise Linux or SUSE Liberty Linux, the action executes [command]``yum --quiet -y update $PACKAGES`` or [command]``dnf --quiet -y upgrade $PACKAGES`` (depending on the package manager the client is using).
+... For non-transactional SUSE clients, such as SUSE Linux Enterprise 15, the action executes [command]``zypper --non-interactive --auto-agree-with-licenses update $PACKAGES``.
+... For transactional SUSE clients, the action executes the same in a transactional shell.
 
+--
 
 
 == Related Topics
