Added default shipped values.

--- a/modules/administration/pages/users.adoc
+++ b/modules/administration/pages/users.adoc
@@ -23,7 +23,9 @@ To add new users to your organization, click btn:[Create User], complete the det
 [[users.password.requirments]]
 == Password requirements
 
-{productname} administrator has the option to enforce the password creation rules, thus ensuring that all new user passwords adhere to the organization's security standards.
+{productname} is shipped with a selection of default values.
+
+To ensure that all new user passwords adhere to the organization's security standards, {productname} administrator has the option to enforce the password creation rules.
 
 The exact password requirements are defined in menu:Admin[Manager Configuration > Password Policy]. 
 
@@ -61,6 +63,18 @@ Use this field to specify restricted character occurences.
 Max Character Occurences::
 Use this field to specify maximum character occurences.
 
+Use button [button]``Save`` to save any of the changed password settings.
+
+Use button [button]``Reset`` to change any settings to the default ones.
+
+[NOTE]
+====
+{productname} is shipped with the following default values:
+
+* Min Password Length: 4
+* Max Password Length: 32
+* Require Uppercase Characters: checked
+====
 
 
 == Deactivate and Delete Accounts
