--- a/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
+++ b/modules/common-workflows/pages/workflow-clients-update-rec-actions.adoc
@@ -76,6 +76,7 @@ A third step is optional but highly recommended to finalize the update process.
 
 
 
+[[cw-update-background]]
 == Background Information on [literal]``uptodate`` State
 
 
@@ -120,6 +121,32 @@ And then, the state also updates {salt}.
 ... For transactional SUSE clients, the action executes the same in a transactional shell.
 
 --
+
++
+
+// . version 4.3" if SUMULIMA detects that reboot is necessary, for 4.3.x, it will automatically reboot that client.
+
++
+
+// 5.0 and later
+
+. Reboot strategy: reboot and rebootifneeded action exist.
+  Users have the option to select and enable a reboot action.
+
+The following text is related to rebootifneeded.
+
+Reboot detection is, again, specific to the client OS. I'm not sure if this is documented somewhere, but IMHO we should. I think this should have its own documentation page, but I'll leave it up to you.
+
+For Debian/Ubuntu, we could just link to [3].
+
+For non-transactional SUSE clients, we check if any of the patches require reboot by using zypper -x list-patches, and reboot if so.
+
+For transactional SUSE clients, we check if there's a pending transaction, and reboot if so.
+
+For the Red Hat-based clients, we use dnf -q needs-restarting -r or needs-restarting -r.
+
+Customers can see the reboot_info.py module for more information [4].
+
 
 
 == Related Topics
