Added requested link.

--- a/modules/installation-and-upgrade/pages/network-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/network-requirements.adoc
@@ -212,6 +212,7 @@ In most cases, allowing access to these URLs is sufficient:
 * [literal]``updates.suse.com``
 * [literal]``installer-updates.suse.com``
 * [literal]``registry.suse.com``
+* [literal]``registry-storage.suse.com``
 
 You can find additional details on whitelisting the specified URLs and their associated IP addresses in this article: https://www.suse.com/support/kb/doc/?id=000021034[Accessing {scclongform} and SUSE registry behind a firewall and/or through a proxy].
 
