more adjustments (per feedback)

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -290,14 +290,16 @@ zypper up
 ----
 zypper install podman
 ----
-. Finish the {productname} installation on {sles} {bci-suma} by running command:
 
-+
-
-[source,shell]
-----
-mgradm install podman
-----
+// FIXME: Should come later, after configuring storage and then run with FQDN
+// . Finish the {productname} installation on {sles} {bci-suma} by running command:
+//
+// +
+//
+// [source,shell]
+// ----
+// mgradm install podman
+// ----
 
 
 
