--- a/modules/common-workflows/pages/workflow-install-from-selfinstall-on-ppc.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-selfinstall-on-ppc.adoc
@@ -77,4 +77,4 @@ To continue with deployment, see xref:installation-and-upgrade:container-deploym
 
 +
 .. Follow the documentation from here to continue with deployment
-xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#_deploy_with_mgradm[Server Deployment].
+xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#deploy-suma-server-mgradm[Server Deployment].
