add links where to continue after host OS install (micro/sles)

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -243,6 +243,7 @@ systemctl enable --now transactional-update.timer
 ----
 ====
 
+To continue with deployment, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#deploy-suma-server-persistent-storage[].
 
 
 [[deploy-suma-server-sles]]
@@ -314,6 +315,8 @@ zypper install podman
 // ----
 // mgradm install podman
 // ----
+
+To continue with deployment, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#deploy-suma-server-persistent-storage[].
 
 
 
