start with host OS adjustments

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -5,7 +5,7 @@ ifeval::[{uyuni-content} == true]
 endif::[]
 
 
-This guide outlines the deployment process for the {productname} {productnumber} Proxy.
+This guide outlines the deployment process for the {productname} {productnumber} Proxy container on {sle-micro} {microversion} or {sles} {bci-suma}.
 This guide presumes you have already successfully deployed a {productname} {productnumber} Server.
 
 [IMPORTANT]
@@ -17,13 +17,12 @@ We are working on managing it as Salt SSH client ([systemitem]``salt-ssh`` conta
 
 To successfully deploy, you will perform the following actions:
 
-
 // Add certificate tasks item
 .Procedure: Deploying Proxy
 . Review hardware requirements.
-. Synchronize the {sle-micro} {microversion} parent channel and the proxy extension child channel on the server.
-. Install {sle-micro} {microversion} on a bare-metal machine.
-. During the installation, register {sle-micro} {microversion} along with the {productname} Proxy extension.
+. Synchronize the {sle-micro} {microversion} or {sles} {bci-suma} parent channel and the proxy extension child channel on the server.
+. Install {sle-micro} or {sles} on a bare-metal machine.
+. During the installation, register {sle-micro} or {sles} along with the {productname} Proxy extension.
 . Create a {salt} activation key.
 . Bootstrap the proxy as a client with the [systemitem]``default`` connection method.
 . Generate a proxy configuration.
@@ -63,13 +62,20 @@ This channel must be fully synchronized on the server, with the child channel [s
 . From the products page enter {sle-micro} in the filter field.
 . Next use the drop-down to select the required architecture.
   For this example {x86_64}.
-. In the [systemitem]``Product Description`` field select the {sle-micro} {microversion} checkbox then use the drop-down to select the [systemitem]``SUSE Manager Proxy Extension 5.0 x86_64`` extension.
+. In the [systemitem]``Product Description`` field select the {sle-micro} {microversion} or {sles} {bci-suma} checkbox then use the drop-down to select the [systemitem]``SUSE Manager Proxy Extension 5.0 x86_64`` extension.
 . Click the btn:[Add products] button.
 . Wait for the synchronization to complete.
 
 
 
-== Deploy {productname} Proxy on {sle-micro} {microversion}
+[[deploy-suma-proxy-host]]
+==  Deploy {productname} Proxy
+
+// FIXME
+// Maybe, here we'd better use a section title such as:
+// _Prepare Host OS for {productname} Deployment_
+
+=== Deploy on {sle-micro} {microversion}
 
 .Procedure: Downloading the Installation Media
 . Locate the {sle-micro} {microversion} installation media at https://www.suse.com/download/sle-micro/.
